--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 		</style>
     </head>
     <body>
-        <button type="submit" onclick="const exampleSocket = new WebSocket('ws://localhost:3000')">Test</button>
+        <button type="submit" onclick="const exampleSocket = new WebSocket('ws://47.222.152.168:3000')">Test</button>
     </body>
 </html>
